-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 25
-
Component/s: hotspot
In our testing we hit next crash
# SIGSEGV (0xb) at pc=0x00007fbbc03c4810, pid=2232216, tid=2232247
#
# JRE version: Java(TM) SE Runtime Environment (25.0) (fastdebug build 25-internal-LTS-2025-05-19-0416342.jdk25.jep515)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 25-internal-LTS-2025-05-19-0416342.jdk25.jep515, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x18f5810] AdapterHandlerLibrary::lookup(int, BasicType*)+0x3b0
#
Current CompileTask:
C1:1362 289 2 java.lang.invoke.VarHandleGuards::guard_LI_I (78 bytes)
Stack: [0x00007fbba05ae000,0x00007fbba06ae000], sp=0x00007fbba06aae40, free space=1011k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x18f5810] AdapterHandlerLibrary::lookup(int, BasicType*)+0x3b0
V [libjvm.so+0x18f8254] AdapterHandlerLibrary::get_adapter(methodHandle const&)+0x2f4
V [libjvm.so+0x1636acd] Method::make_adapters(methodHandle const&, JavaThread*)+0x6d
V [libjvm.so+0x1636e1b] Method::link_method(methodHandle const&, JavaThread*)+0x24b
V [libjvm.so+0x163d611] Method::make_method_handle_intrinsic(vmIntrinsicID, Symbol*, JavaThread*)+0x671
V [libjvm.so+0x1a54653] SystemDictionary::find_method_handle_intrinsic(vmIntrinsicID, Symbol*, JavaThread*)+0x1b3
V [libjvm.so+0x147bf97] LinkResolver::lookup_polymorphic_method(LinkInfo const&, Handle*, JavaThread*)+0x6b7
V [libjvm.so+0x147ea44] LinkResolver::resolve_method(LinkInfo const&, Bytecodes::Code, JavaThread*)+0x694
V [libjvm.so+0x1482884] LinkResolver::linktime_resolve_virtual_method(LinkInfo const&, JavaThread*)+0x34
V [libjvm.so+0x1482cf9] LinkResolver::linktime_resolve_virtual_method_or_null(LinkInfo const&)+0x39
V [libjvm.so+0x9ddf39] ciEnv::lookup_method(ciInstanceKlass*, ciKlass*, Symbol*, Symbol*, Bytecodes::Code, constantTag)+0x1d9
V [libjvm.so+0x9de33b] ciEnv::get_method_by_index_impl(constantPoolHandle const&, int, Bytecodes::Code, ciInstanceKlass*)+0x1cb
V [libjvm.so+0xa4aadc] ciBytecodeStream::get_method(bool&, ciSignature**)+0x13c
V [libjvm.so+0x83e6e7] GraphBuilder::invoke(Bytecodes::Code)+0x37
V [libjvm.so+0x840747] GraphBuilder::iterate_bytecodes_for_block(int)+0xc07
V [libjvm.so+0x843bca] GraphBuilder::iterate_all_blocks(bool)+0x8a
V [libjvm.so+0x845772] GraphBuilder::GraphBuilder(Compilation*, IRScope*)+0xa72
V [libjvm.so+0x854418] IRScope::IRScope(Compilation*, IRScope*, int, ciMethod*, int, bool)+0x3d8
V [libjvm.so+0x8545da] IR::IR(Compilation*, ciMethod*, int)+0xaa
V [libjvm.so+0x81ce39] Compilation::build_hir() [clone .part.0]+0x199
V [libjvm.so+0x81f1c8] Compilation::compile_java_method()+0x508
V [libjvm.so+0x81f9c6] Compilation::compile_method()+0x266
V [libjvm.so+0x82018d] Compilation::Compilation(AbstractCompiler*, ciEnv*, ciMethod*, int, BufferBlob*, bool, DirectiveSet*)+0x35d
V [libjvm.so+0x821aff] Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1ff
V [libjvm.so+0xb38878] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xb58
V [libjvm.so+0xb39a48] CompileBroker::compiler_thread_loop()+0x578
V [libjvm.so+0x108543b] JavaThread::thread_main_inner()+0x13b
V [libjvm.so+0x1ab51d6] Thread::call_run()+0xb6
V [libjvm.so+0x1743a58] thread_native_entry(Thread*)+0x128
# SIGSEGV (0xb) at pc=0x00007fbbc03c4810, pid=2232216, tid=2232247
#
# JRE version: Java(TM) SE Runtime Environment (25.0) (fastdebug build 25-internal-LTS-2025-05-19-0416342.jdk25.jep515)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 25-internal-LTS-2025-05-19-0416342.jdk25.jep515, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x18f5810] AdapterHandlerLibrary::lookup(int, BasicType*)+0x3b0
#
Current CompileTask:
C1:1362 289 2 java.lang.invoke.VarHandleGuards::guard_LI_I (78 bytes)
Stack: [0x00007fbba05ae000,0x00007fbba06ae000], sp=0x00007fbba06aae40, free space=1011k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x18f5810] AdapterHandlerLibrary::lookup(int, BasicType*)+0x3b0
V [libjvm.so+0x18f8254] AdapterHandlerLibrary::get_adapter(methodHandle const&)+0x2f4
V [libjvm.so+0x1636acd] Method::make_adapters(methodHandle const&, JavaThread*)+0x6d
V [libjvm.so+0x1636e1b] Method::link_method(methodHandle const&, JavaThread*)+0x24b
V [libjvm.so+0x163d611] Method::make_method_handle_intrinsic(vmIntrinsicID, Symbol*, JavaThread*)+0x671
V [libjvm.so+0x1a54653] SystemDictionary::find_method_handle_intrinsic(vmIntrinsicID, Symbol*, JavaThread*)+0x1b3
V [libjvm.so+0x147bf97] LinkResolver::lookup_polymorphic_method(LinkInfo const&, Handle*, JavaThread*)+0x6b7
V [libjvm.so+0x147ea44] LinkResolver::resolve_method(LinkInfo const&, Bytecodes::Code, JavaThread*)+0x694
V [libjvm.so+0x1482884] LinkResolver::linktime_resolve_virtual_method(LinkInfo const&, JavaThread*)+0x34
V [libjvm.so+0x1482cf9] LinkResolver::linktime_resolve_virtual_method_or_null(LinkInfo const&)+0x39
V [libjvm.so+0x9ddf39] ciEnv::lookup_method(ciInstanceKlass*, ciKlass*, Symbol*, Symbol*, Bytecodes::Code, constantTag)+0x1d9
V [libjvm.so+0x9de33b] ciEnv::get_method_by_index_impl(constantPoolHandle const&, int, Bytecodes::Code, ciInstanceKlass*)+0x1cb
V [libjvm.so+0xa4aadc] ciBytecodeStream::get_method(bool&, ciSignature**)+0x13c
V [libjvm.so+0x83e6e7] GraphBuilder::invoke(Bytecodes::Code)+0x37
V [libjvm.so+0x840747] GraphBuilder::iterate_bytecodes_for_block(int)+0xc07
V [libjvm.so+0x843bca] GraphBuilder::iterate_all_blocks(bool)+0x8a
V [libjvm.so+0x845772] GraphBuilder::GraphBuilder(Compilation*, IRScope*)+0xa72
V [libjvm.so+0x854418] IRScope::IRScope(Compilation*, IRScope*, int, ciMethod*, int, bool)+0x3d8
V [libjvm.so+0x8545da] IR::IR(Compilation*, ciMethod*, int)+0xaa
V [libjvm.so+0x81ce39] Compilation::build_hir() [clone .part.0]+0x199
V [libjvm.so+0x81f1c8] Compilation::compile_java_method()+0x508
V [libjvm.so+0x81f9c6] Compilation::compile_method()+0x266
V [libjvm.so+0x82018d] Compilation::Compilation(AbstractCompiler*, ciEnv*, ciMethod*, int, BufferBlob*, bool, DirectiveSet*)+0x35d
V [libjvm.so+0x821aff] Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1ff
V [libjvm.so+0xb38878] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xb58
V [libjvm.so+0xb39a48] CompileBroker::compiler_thread_loop()+0x578
V [libjvm.so+0x108543b] JavaThread::thread_main_inner()+0x13b
V [libjvm.so+0x1ab51d6] Thread::call_run()+0xb6
V [libjvm.so+0x1743a58] thread_native_entry(Thread*)+0x128
- relates to
-
JDK-8357514 Disable AOT caching for runtime stubs
-
- Closed
-
- links to
-
Commit(master)
openjdk/jdk/b1b786a3
-
Review(master)
openjdk/jdk/25398