8357402: Crash in AdapterHandlerLibrary::lookup