src/hotspot/share/cds/cdsConfig.cpp
@@ -895,3 +895,7 @@ void CDSConfig::disable_dumping_aot_code() {
 void CDSConfig::enable_dumping_aot_code() {
   _is_dumping_aot_code = true;
 }
+
+bool CDSConfig::is_dumping_adapters() {
+  return (AOTAdapterCaching && is_dumping_final_static_archive());
+}
